--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
     <!--featured websites-->
     <section class="featured-sites">
         <h5>Featured Sites</h5>
-        <span><a href="https://hng.tech/learn" data-testid="hngLink">hng.tech/learn</a></span>
+        <span><a href="https://hng.tech/learn" data-testid="hngLink">hng tech learn</a></span>
         <br>
-        <span><a href="https://keyword.dog" data-testid="keywordLink">keyword.dog</a></span>
+        <span><a href="https://keyword.dog" data-testid="keywordLink">keyword dog</a></span>
         <br>
-        <span><a href="https://scrapeanyweb.site" data-testid="scrapeanywebLink">scrapeanyweb.site</a></span>
+        <span><a href="https://scrapeanyweb.site" data-testid="scrapeanywebLink">scrapeanyweb</a></span>
         
     </section>
 
